fix: change overflow to auto in bottom-legend-container

--- a/src/core/styles.scss
+++ b/src/core/styles.scss
@@ -114,7 +114,7 @@ $side-legend-min-inline-size: max(20%, 150px);
 
 .bottom-legend-container {
   display: flex;
-  overflow: hidden;
+  overflow: auto;
   gap: cs.$space-scaled-xxl;
   justify-content: space-between;
 }
